# insurance-doc-chatbot-backend

./: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml
apps/auth/: models.py  repository.py  router.py  schemas.py  services.py  utils.py
apps/chat/: models.py
apps/core/: ai_models.py  config.py  custom_logger.py  database.py  global_utils.py  prompts.py
apps/ingestion/: chunker.py  models.py  repository.py  router.py  schemas.py  services.py  utils.py
apps/query/: models.py  router.py  schemas.py  services.py
migrations/: env.py
migrations/versions/: 087159954e82_add_chunks_table.py  1cdb4384cfd9_add_first_name_and_last_name_to_users.py  90f524bd9f2e_add_query_context_and_query_usage_models.py  a2287198a475_add_ingestion_model.py
