[project]
name = "insurance-rag-backend"
version = "0.1.0"
description = "Insurance Policy Q&A Chatbot — RAG backend (FastAPI + Vertex AI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.4.0",
    "pdfplumber>=0.11.0",
    "langchain>=0.3.0",
    "langchain-google-vertexai>=2.0.0",
    "google-cloud-aiplatform>=1.60.0",
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2.2",
    "structlog>=24.1.0",
    "sqlalchemy>=2.0.50",
    "cloud-sql-python-connector>=1.20.3",
    "pg8000>=1.31.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
