[project]
name = "insurance-rag-backend"
version = "0.1.0"
description = "Insurance Policy Q&A Chatbot — RAG backend (FastAPI + Vertex AI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.4.0",
    "pydantic[email]>=2.13.4",
    "sqlalchemy>=2.0.50",
    "cloud-sql-python-connector>=1.20.3",
    "pg8000>=1.31.5",
    "bcrypt>=5.0.0",
    "pyjwt>=2.13.0",
    "sendgrid>=6.12.5",
    "google-adk>=2.2.0",
    "docling>=2.103.0",
    "pymupdf>=1.27.2.3",
    "pdfplumber>=0.11.10",
    "alembic>=1.13.0",
    "google-cloud-storage>=2.18.0",
    "pgvector>=0.3.0",
    "google-cloud-aiplatform>=1.158.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
